multiple consumer added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ check.rabbitmq.queue=check.queue
 check.rabbitmq.routingkey=check.routingkey
 
 spring.main.allow-bean-definition-overriding=true
+
+
+server.port=1122
